<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardElevation="2dp"
    app:strokeColor="#EEE"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_post_author_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_post_author_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_post_author_avatar"
            app:layout_constraintTop_toTopOf="@id/iv_post_author_avatar"
            tools:text="Nir Geron" />

        <TextView
            android:id="@+id/tv_post_timestamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_post_author_name"
            app:layout_constraintTop_toBottomOf="@id/tv_post_author_name"
            tools:text="6mo" />

        <TextView
            android:id="@+id/tv_post_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_post_author_avatar"
            tools:text="I'm happy to share that I'm starting a new position!" />

        <TextView
            android:id="@+id/tv_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_post_content"
            tools:text="15 Likes" />

        <TextView
            android:id="@+id/tv_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tv_like_count"
            app:layout_constraintTop_toTopOf="@id/tv_like_count"
            tools:text="8 Comments" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_like_count" />

        <LinearLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_post_like"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feed_like_btn_text"
                android:textColor="?android:attr/textColorSecondary"
                app:icon="@drawable/ic_like_empty"
                app:iconTint="?android:attr/textColorSecondary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_post_comment"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feed_comment_btn_text"
                android:textColor="?android:attr/textColorSecondary"
                app:icon="@drawable/ic_comment"
                app:iconTint="?android:attr/textColorSecondary" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_comments_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="rv_post_comments,til_add_comment,btn_add_comment"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_post_comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar"
            tools:itemCount="1"
            tools:listitem="@layout/list_item_comment" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_add_comment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/post_item_add_a_comment_hint"
            app:layout_constraintEnd_toStartOf="@id/btn_add_comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_post_comments">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_add_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_add_comment"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/post_comment"
            android:src="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="@id/til_add_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_add_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>